--- a/templates/layout/nav.html.twig
+++ b/templates/layout/nav.html.twig
@@ -35,18 +35,27 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
+        
       <ul class="nav navbar-nav navbar-right">
         <li><a href="{{ path('api_entrypoint') }}">API</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="{{ path('admin') }}">Admin</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
+        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    {% if is_granted('ROLE_ADMIN') %}
+                    <li><a href="{{ path('admin') }}">Admin</a></li>
+                    {% endif %}            
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="{{ path('logout') }}">Déconnexion</a></li>
+                </ul>
+            </li>
+        {% else %}
+            <li><a href="{{ path('user_registration') }}">Inscription</a></li>
+            <li><a href="{{ path('login') }}">Connexion</a></li>
+        {% endif %}
+        
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
