--- a/templates/layout/nav.html.twig
+++ b/templates/layout/nav.html.twig
@@ -37,7 +37,9 @@
       </form>
         
       <ul class="nav navbar-nav navbar-right">
+        {% if is_granted('ROLE_API') %}
         <li><a href="{{ path('api_entrypoint') }}">API</a></li>
+        {% endif %}
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
