init font awesome

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,4 +8,5 @@ $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 
 
 // set if you're also including font-awesome
-// $fa-font-path: "~font-awesome/fonts";
+// $fa-font-path: "~@fortawesome/fontawesome-pro-webfonts/webfonts";
+// @import '~fortawesome/fontawesome-pro-webfonts/css';
