--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,12 +3,31 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-{{ form_start(form) }}
-    {{ form_row(form.username) }}
-    {{ form_row(form.email) }}
-    {{ form_row(form.plainPassword.first) }}
-    {{ form_row(form.plainPassword.second) }}
+{{ form_start(form, { 'attr': {'class': 'form form-horizontal'} }) }}
+    <div class="form-group">
+        {{ form_label(form.username) }}  
+        {{ form_errors(form.username) }}  
+        {{ form_widget(form.username, { 'attr': {'class': 'form-control'}}) }}
+    </div>
 
-    <button type="submit">Register!</button>
+    <div class="form-group">
+        {{ form_label(form.email) }}  
+        {{ form_errors(form.email) }}  
+        {{ form_widget(form.email, { 'attr': {'class': 'form-control'}}) }}
+    </div>
+
+    <div class="form-group">
+        {{ form_label(form.plainPassword.first) }}  
+        {{ form_errors(form.plainPassword.first) }}  
+        {{ form_widget(form.plainPassword.first, { 'attr': {'class': 'form-control'}}) }}
+    </div>
+
+    <div class="form-group">
+        {{ form_label(form.plainPassword.second) }}  
+        {{ form_errors(form.plainPassword.second) }}  
+        {{ form_widget(form.plainPassword.second, { 'attr': {'class': 'form-control'}}) }}
+    </div>
+
+    <button type="submit" class="btn btn-primary">S'enregistrer</button>
 {{ form_end(form) }}
 {% endblock %}
