--- a/templates/layout/nav.html.twig
+++ b/templates/layout/nav.html.twig
@@ -8,26 +8,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ path('core.index') }}">Symfony 4</a>
+      <a class="navbar-brand" href="{{ path('homepage') }}">Symfony 4</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="{{ path('core.index') }}">Accueil <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="{{ path('homepage') }}">Accueil <span class="sr-only">(current)</span></a></li>
         <li><a href="{{ path('post.index') }}">Post</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
+        <li><a href="{{ path('club.index') }}">Club</a></li>
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
