--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <h1>Welcome to my post</h1>
+    <h1>{{ 'title.post'|trans }}</h1>
 
     {% if posts is defined %}
     <p>Il existe {{ posts|length }} posts</p>
