--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -5,29 +5,53 @@
 {% block body %}
 {{ form_start(form, { 'attr': {'class': 'form form-horizontal'} }) }}
     <div class="form-group">
-        {{ form_label(form.username) }}  
-        {{ form_errors(form.username) }}  
-        {{ form_widget(form.username, { 'attr': {'class': 'form-control'}}) }}
+        {{ form_label(form.username, "", { 'label_attr': {'class': 'col-sm-2 control-label'}}) }}  
+        <div class="col-sm-6">
+            {{ form_errors(form.username) }}  
+            {{ form_widget(form.username, { 'attr': {'class': 'form-control'}}) }}
+        </div>
     </div>
 
     <div class="form-group">
-        {{ form_label(form.email) }}  
-        {{ form_errors(form.email) }}  
-        {{ form_widget(form.email, { 'attr': {'class': 'form-control'}}) }}
+        {{ form_label(form.email, "", { 'label_attr': {'class': 'col-sm-2 control-label'}}) }}  
+        <div class="col-sm-6">
+            {{ form_errors(form.email) }}  
+            {{ form_widget(form.email, { 'attr': {'class': 'form-control'}}) }}
+        </div>
     </div>
 
     <div class="form-group">
-        {{ form_label(form.plainPassword.first) }}  
-        {{ form_errors(form.plainPassword.first) }}  
-        {{ form_widget(form.plainPassword.first, { 'attr': {'class': 'form-control'}}) }}
+        {{ form_label(form.plainPassword.first, "", { 'label_attr': {'class': 'col-sm-2 control-label'}}) }}  
+        <div class="col-sm-6">
+            {{ form_errors(form.plainPassword.first) }}  
+            {{ form_widget(form.plainPassword.first, { 'attr': {'class': 'form-control'}}) }}
+        </div>
     </div>
 
     <div class="form-group">
-        {{ form_label(form.plainPassword.second) }}  
-        {{ form_errors(form.plainPassword.second) }}  
-        {{ form_widget(form.plainPassword.second, { 'attr': {'class': 'form-control'}}) }}
+        {{ form_label(form.plainPassword.second, "", { 'label_attr': {'class': 'col-sm-2 control-label'}}) }}  
+        <div class="col-sm-6">
+            {{ form_errors(form.plainPassword.second) }}  
+            {{ form_widget(form.plainPassword.second, { 'attr': {'class': 'form-control'}}) }}
+        </div>
+    </div>
+    <div class="form-group">
+        {{ form_label(form.isArcher, "", { 'label_attr': {'class': 'col-sm-2 control-label'}}) }} 
+        <div class="col-sm-6">
+            <div class="checkbox">
+                <label>
+                   {{ form_widget(form.isArcher) }}  
+                </label>
+            </div>
+            {{ form_errors(form.isArcher) }}  
+        </div>
     </div>
 
-    <button type="submit" class="btn btn-primary">S'enregistrer</button>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
+        </div>
+    </div>
+    
 {{ form_end(form) }}
 {% endblock %}
