--- a/templates/club/show.html.twig
+++ b/templates/club/show.html.twig
@@ -10,11 +10,13 @@
         <article>
             <h3>Liste des membres</h3>
 
+            <ul>
             {% for member in club.members %}
-            <p>Il y a 1 member</p>
+                <li>{{ member.registrationNumber }} - {{ member.archer.fullname }}</li>
             {% else %}
-            <p>Pas de members.. :'(</p>
+                <li>Pas de members.. :'(</li>
             {% endfor %}
+            </ul>
 
             <a href="{{ path("club.add.affiliate", {'club': club.id}) }}"><span class="btn btn-primary">Ajouter un archer</span></a>
         </article>
