archer and tournament

--- a/templates/club/show.html.twig
+++ b/templates/club/show.html.twig
@@ -12,7 +12,7 @@
 
             <ul>
             {% for member in club.members %}
-                <li>{{ member.registrationNumber }} - {{ member.archer.fullname }}</li>
+                <li><a href="{{ path('archer.show', {'archer': member.archer.id}) }}">{{ member.registrationNumber }} - {{ member.archer.fullname }}</a></li>
             {% else %}
                 <li>Pas de members.. :'(</li>
             {% endfor %}
