--- a/templates/layout/nav.html.twig
+++ b/templates/layout/nav.html.twig
@@ -8,15 +8,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ path('homepage') }}">Symfony 4</a>
+      <a class="navbar-brand" href="{{ path('core.index') }}">Symfony 4</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="{{ path('homepage') }}">Accueil <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="{{ path('core.index') }}">Accueil <span class="sr-only">(current)</span></a></li>
         <li><a href="{{ path('post.index') }}">Post</a></li>
         <li><a href="{{ path('club.index') }}">Club</a></li>
+        <li><a href="{{ path('archer.index') }}">Archer</a></li>
+        <li><a href="{{ path('tournament.index') }}">Compétition</a></li>
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
