--- a/templates/tournament/show.html.twig
+++ b/templates/tournament/show.html.twig
@@ -12,4 +12,22 @@
         <p>yeah admin :D</p>
     {% endif %}
     </h3>
+
+    <h3>
+    Archés enregistrés
+    </h3>
+    <table>
+        <tr>
+            <th>FullName</th>
+            <th>Points</th>
+            <th>10</th>
+            <th>9</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+        </tr>
+    </table>
 {% endblock %}
