add form Peloton

--- a/templates/tournament/add.html.twig
+++ b/templates/tournament/add.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Clubs !{% endblock %}
+{% block title %}Compétition !{% endblock %}
 
 {% block body %}
 
