--- a/templates/peloton/form.html.twig
+++ b/templates/peloton/form.html.twig
@@ -6,16 +6,18 @@
         {{ form_label(form.maxParticipants, "Nombre maximum de participants", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
         {{ form_errors(form.maxParticipants) }}
         <div class="col-sm-10">
-            {{ form_widget(form.maxParticipants) }}
+            {{ form_widget(form.maxParticipants, {'attr': {'class': 'form-control'}}) }}
         </div>
     </div>
-    <div class="form-group">
-        {{ form_label(form.types, "Types", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
-        {{ form_errors(form.types) }}
+    <fieldset class="form-group">
+        <div class="row">
+        <legend class="control-label col-sm-2 pt-0">{{ form_label(form.types, "Types") }}</legend>
         <div class="col-sm-10">
-            {{ form_widget(form.types) }}
+            <div class="form-check">
+            {{ form_widget(form.types, {'attr': {'class': 'checkbox-inline'}}) }}
+            </div>
         </div>
-    </div>
+    </fieldset>
     <div class="form-group">
         {{ form_label(form.startTime, "Nombre maximum de participants", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
         {{ form_errors(form.startTime) }}
