--- a/templates/club/form.html.twig
+++ b/templates/club/form.html.twig
@@ -1,7 +1,9 @@
 {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
 
     {{ form_errors(form) }}
+     {{ form_widget(form) }}
 
+{#
     <div class="form-group">
         {{ form_label(form.name, "", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
         {{ form_errors(form.name) }}
@@ -33,6 +35,6 @@
     {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
 
     {{ form_rest(form) }}
-
+#}
     {# Fermeture de la balise <form> du formulaire HTML #}
 {{ form_end(form) }}
