--- a/templates/tournament/form.html.twig
+++ b/templates/tournament/form.html.twig
@@ -23,6 +23,13 @@
             {{ form_widget(form.type) }}
         </div>
     </div>
+    <div class="form-group">
+        {{ form_label(form.organizer, "Organisateur", {'label_attr': {'class': 'col-sm-2 control-label'}}) }}
+        {{ form_errors(form.organizer) }}
+        <div class="col-sm-10">
+            {{ form_widget(form.organizer) }}
+        </div>
+    </div>
     {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
 
     {{ form_rest(form) }}
