--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,6 +3,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<h1>Inscription</h1>
+
 {{ form_start(form, { 'attr': {'class': 'form form-horizontal'} }) }}
     <div class="form-group">
         {{ form_label(form.username, "", { 'label_attr': {'class': 'col-sm-2 control-label'}}) }}  
@@ -35,15 +37,23 @@
             {{ form_widget(form.plainPassword.second, { 'attr': {'class': 'form-control'}}) }}
         </div>
     </div>
-    <div class="form-group">
-        {{ form_label(form.isArcher, "", { 'label_attr': {'class': 'col-sm-2 control-label'}}) }} 
-        <div class="col-sm-6">
+
+    <div class="form-group">        
+        <div class="col-sm-offset-2">
             <div class="checkbox">
                 <label>
-                   {{ form_widget(form.isArcher) }}  
+                   {{ form_widget(form.isArcher) }} 
                 </label>
             </div>
             {{ form_errors(form.isArcher) }}  
+        </div>
+    </div>
+
+    <div class="form-group">
+        {{ form_label(form.sexe, "", { 'label_attr': {'class': 'col-sm-2 control-label'}}) }}  
+        <div class="col-sm-6">
+            {{ form_errors(form.sexe) }}  
+            {{ form_widget(form.sexe, { 'attr': {'class': 'form-control'}}) }}
         </div>
     </div>
 
